--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"cors": "^2.8.5",
 		"express": "^4.21.2",
 		"marked": "^15.0.6",
-		"node-fetch": "^3.3.2"
+		"multer": "^1.4.5-lts.1",
+		"node-fetch": "^3.3.2",
+		"pdf-parse": "^1.1.1"
 	}
 }
