--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
+		"epub": "^1.3.0",
 		"express": "^4.21.2",
 		"marked": "^15.0.6",
 		"multer": "^1.4.5-lts.1",
