--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.0.6",
 		"cors": "^2.8.5",
 		"express": "^4.21.2",
 		"marked": "^15.0.6",
-		"node-fetch": "^3.3.2"
+		"node-fetch": "^3.3.2",
+		"tailwindcss": "^4.0.6"
 	}
 }
