--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"cors": "^2.8.5",
 		"epubjs": "^0.3.93",
 		"express": "^4.21.2",
+		"firebase": "^11.4.0",
 		"marked": "^15.0.6",
 		"mysql2": "^3.12.0",
 		"node-fetch": "^3.3.2",
